--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && bash -c \"git branch -D gh-pages 2>/dev/null || true && git checkout --orphan gh-pages && git rm -rf . && touch .nojekyll && cp -r out/* . && rm -rf out && git add . && git commit -m 'Deploy to GitHub Pages' && git push origin gh-pages -f && git checkout -\""
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
