--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npm run build && bash -c \"git branch -D gh-pages 2>/dev/null || true && git checkout --orphan gh-pages && git rm -rf . && touch .nojekyll && echo 'node_modules' > .gitignore && cp -r out/* . && rm -rf out && git add . && git commit -m 'Deploy to GitHub Pages' && git push origin gh-pages -f && git checkout -\""
+    "deploy": "npm run build && bash -c \"git branch -D gh-pages 2>/dev/null || true && git checkout --orphan gh-pages && git rm -rf . && touch .nojekyll && echo 'node_modules' > .gitignore && cp -r out/* . && rm -rf out && git add . && git commit -m 'Deploy to GitHub Pages' && git push origin gh-pages -f && git checkout master\""
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
